<resources>
    <string name="app_name">Plante</string>
    <string name="action_settings">Settings</string>
    <string name="action_date">Date</string>
    <string name="action_fixture">Fixture</string>
    <string name="action_deleteAll">Delete All</string>
    <string name="plant_name">Plant name</string>
    <string name="water_frequency">Water frequency</string>
    <string name="plant_cant_be_void">Please write a name and water frequency!</string>
    <string name="water_frequency_value">Water frequency should > 1!</string>
    <string name="save">Save</string>
</resources>
