<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.univ_lille1.plante.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_date"
        android:orderInCategory="101"
        android:title="@string/action_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fixture"
        android:orderInCategory="101"
        android:title="@string/action_fixture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="101"
        android:title="@string/action_deleteAll"
        app:showAsAction="never" />

</menu>
